[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kion-vectorstore"
version = "0.1.1"
description = "A Python library for managing vector stores."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
        "flask",
        "flask-cors",
        "langchain",
        "langchain-community",
        "langchain-text-splitters",
        "langchain-openai",
        "psycopg2-binary",
        "pypdf",
        "pgvector"
]

[tool.setuptools.package-data]
"*" = ["static/*"]